--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing:border-box;
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -23,9 +23,6 @@ nav {
 
 img {
     width: 100%;
-    height: 100%;
-    max-height: 50vh;
-    padding: 20px;
 }
 
 p {
@@ -102,24 +99,26 @@ li {
     background-color: #242424;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    right: 0;
+    bottom: 0;
     z-index: 100;
     transition: all 300ms ease;
     justify-content: center;
     align-items: center;
     opacity: 0;
     visibility: hidden;
+    transform: translate(100%);
 }
 
-.menu__open {
+.menu--open {
     max-height: 100vh;
     overflow-y: hidden;
 }
-.menu__open .menu__backdrop {
+.menu--open .menu__backdrop {
     display: flex;
     visibility: visible;
     opacity: 1;
+    transform: translate(0);
 }
 
 .menu__links {
@@ -202,7 +201,7 @@ button:active {
 
 .header__img--wrapper {
     padding: 20px;
-    z-index: 2;
+    z-index: 50;
 }
 .container {
     padding: 56px 0;
@@ -231,8 +230,8 @@ button:active {
     max-width: 100vw;
 }
 
-#highlights:before, 
-#highlights:after {
+#highlights:after, 
+#highlights:before {
     background: url('/assets/wave.svg');
     content: "";
     position: absolute;
